@@ -1,5 +1,10 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+
+== 11/27/2014 ==
+Kayen: Projectiles (ie Arrows) fired from archery will now do damage upon impact instead of instantly (consistent w/ live).
+Optional SQL: utils/sql/git/optional/2014_11_27_ProjectileDmgOnImpact.sql
+
 == 11/24/2014 ==
 Trevius: Spells that modify model size are now limited to 2 size adjustments from the base size.
 Trevius: Fix to prevent Mercenaries from being set as Group Leader.
